Generate Empty IO (#4)
Co-authored-by: Watson <wilson.watson@swri.org>