@@ -4,19 +4,6 @@ plugins {
     id 'maven-publish'
 }
 
-tasks.withType(JavaCompile) {
-    options.compilerArgs << '--add-exports' << 'jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED'
-    options.compilerArgs << '--add-exports' << 'jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED'
-    options.compilerArgs << '--add-exports' << 'jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED'
-    options.compilerArgs << '--add-exports' << 'jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED'
-    options.compilerArgs << '--add-exports' << 'jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED'
-    options.compilerArgs << '--add-exports' << 'jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED'
-    options.compilerArgs << '--add-exports' << 'jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED'
-    options.compilerArgs << '--add-exports' << 'jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED'
-    options.compilerArgs << '--add-exports' << 'jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED'
-    options.compilerArgs << '--add-exports' << 'jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED'
-}
-
 // sourceCompatibility = JavaVersion.VERSION_17
 // targetCompatibility = JavaVersion.VERSION_17
 
@@ -25,7 +12,7 @@ repositories {
 }
 
 dependencies {
-    
+    implementation "com.squareup:javapoet:1.13.0"
 }
 
 publishing {
@@ -34,7 +21,7 @@ publishing {
             // Use jitpack format for publishing to mavenLocal
             groupId = 'com.github.Frc5572'
             artifactId = 'RobotTools'
-            version = 'main-SNAPSHOT'
+            version = 'test-SNAPSHOT'
 
             from components.java
         }
